--- a/task_manager/manager/templates/manager_api/api_project_tasks.html
+++ b/task_manager/manager/templates/manager_api/api_project_tasks.html
@@ -60,9 +60,6 @@
                 <label for="task-deadline-date">Дедлайн (Дата):</label>
                 <input type="date" id="task-deadline-date">
 
-                <label for="task-deadline-time">Дедлайн (Время):</label>
-                <input type="time" id="task-deadline-time">
-
                 <div class="modal-buttons">
                     <button type="button" class="cancel-button">Отмена</button>
                     <button type="submit" class="save-button">Добавить</button>
@@ -88,7 +85,7 @@
                 <textarea id="edit-task-content" rows="3"></textarea>
     
                 <label for="edit-task-deadline">Дедлайн:</label>
-                <input type="datetime-local" id="edit-task-deadline">
+                <input type="date" id="edit-task-deadline">
     
                 <div class="modal-buttons">
                     <button type="button" class="cancel-button" id="cancel-edit-task">Отмена</button>
